--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "next": "14.1.4",
+    "posthog-js": "^1.121.2",
     "react": "^18",
     "react-dom": "^18"
   },
